--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -16,13 +16,13 @@
 						<div class="body">
 							<h1>Travel</h1>
 							<ul id="sites">
-								{{#each trips}}
+							{{#each trips}}
 								<li>
-									<a href=“travel"><img src="images/{{this.image}}" alt="Img"></a>
-									<h2><a href=“travel">{{this.name}}</a></h2>
-									{{this.description}}
+									<a href=“/travel"><img src="images/{{this.image}}" alt="Img"></a>
+									<h2><a href=“/travel">{{this.name}}</a></h2>
+									{{{this.description}}}
 								</li>
-								{{/each}}
+							{{/each}}
 							</ul>
 						</div>
 					</div>
@@ -33,3 +33,5 @@
 	</div>
 </body>
 </html>
+
+
