--- a/app_admin/src/app/trip-listing/trip-listing.component.html
+++ b/app_admin/src/app/trip-listing/trip-listing.component.html
@@ -1,4 +1,8 @@
 <!-- <pre>{{ trips | json }}</pre> -->
+<div>
+  <button (click)="addTrip()" class="btn btn-info">Add Trip</button>
+</div>
+
 <div class="row">
   <!--
   <div *ngFor="let trip of trips">
