added edit trip
added edit trip. still only partially loads, but not direct errors indicated

--- a/app_admin/src/app/edit-trip/edit-trip.component.html
+++ b/app_admin/src/app/edit-trip/edit-trip.component.html
@@ -1,6 +1,8 @@
+
+<!--!!!! FIXME:  !!!!!-->
 <div class="col-md-3">
-  <h2 class="text-center">Add Trip</h2>
-  <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+  <h2 class="text-center">Edit Trip</h2>
+  <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>Code:</label>
       <input type="text" formControlName="code" placeholder="Code" class="form-control"
@@ -73,7 +75,7 @@
     </div>
   </div>
 
-    <button type="submit" class="btn btn-info">Save</button>
+    <button type="submit" class="btn btn-info">Edit Trip</button>
   </form> 
 </div>
 
