--- a/app_admin/src/app/login/login.component.html
+++ b/app_admin/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 col-md-8">
         <h2>Login</h2>
-        <form (ngSubmit)="onLoginSubmit(evt)">
+        <form (ngSubmit)="onLoginSubmit()">
         <div role="alert" *ngIf="formError" class="alert alert-danger">{{ formError }}</div>
         <div class="form-group">
             <label for="email">Email Address</label>
